--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="DarkGreen">#024032</color>
+
+    <!-- Added Colours -->
+    <color name="teal_200">#00BCD4</color>
+    <color name="teal_700">#006EC6</color>
+
 </resources>
